<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    >

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elige"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        />

    <Button
        android:id="@+id/btn1"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="143dp"
        android:text="@string/Linear" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="14dp"
        android:text="@string/Table" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Grid" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="15dp"
        android:text="@string/Relative" />



</LinearLayout>
