<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/nombre"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombre"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:hint="@string/apellidos"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/estado"
        android:layout_below="@id/apellidos"
        android:layout_alignParentStart="true"

        />

    <TextView
        android:id="@+id/cargo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/apellidos"
        android:layout_marginTop="30dp"
        android:layout_marginStart="200dp"
        android:text="@string/cargo"
        android:layout_toEndOf="@id/estado"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/apellidos"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:entries="@array/estados"
        android:minHeight="48dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/apellidos"
        android:layout_marginStart="260dp"
        android:layout_marginTop="50dp"
        android:entries="@array/cargos"
        android:minHeight="48dp" />



</RelativeLayout>